tek_3/sem_5/B-DOP-500-LYN-5-1-bernstein-oscar.deschamps/cadvisor.daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cadvisor-daemonset
  namespace: kube-system
  annotations:
    kubernetes.io/pod: 'docker/default'
spec:
  selector:
    matchLabels:
      service: cadvisor-daemonset
      stage: gone  
  template:
    metadata:
      name: cadvisor
      labels:
        service: cadvisor-daemonset
        stage: gone  
    spec:
      serviceAccountName: cadvisor
      restartPolicy: Always
      containers:
      - name: cadvisor-container
        image: google/cadvisor:latest
        volumeMounts:
        - name: rootfs
          mountPath: /rootfs
          readOnly: true
        - name: var-run
          mountPath: /var/run
          readOnly: true
        - name: sys
          mountPath: /sys
          readOnly: true
        - name: docker
          mountPath: /var/lib/docker
          readOnly: true
        - name: disk
          mountPath: /dev/disk
          readOnly: true
        ports:
          - containerPort: 8080
      automountServiceAccountToken: false
      volumes:
      - name: rootfs
        hostPath:
          path: /
      - name: var-run
        hostPath:
          path: /var/run
      - name: sys
        hostPath:
          path: /sys
      - name: docker
        hostPath:
          path: /var/lib/docker
      - name: disk
        hostPath:
          path: /dev/disk
      terminationGracePeriodSeconds: 30
