tek_3/sem_5/B-DOP-500-LYN-5-1-bernstein-oscar.deschamps/poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deploy
  namespace: default  
  labels:
    app: poll
    stage: terrible

spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
      stage: terrible  
  template:
    metadata:
      labels:
        app: poll
        stage: terrible  
    spec:
      restartPolicy: Always
      containers:
        - name: poll-container
          image: epitechcontent/t-dop-600-poll:k8s
          ports:
          - containerPort: 80
          resources:
            limits:
              memory: "128M"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - poll
              
              - key: stage  
                operator: In
                values:
                - terrible  
            topologyKey: "kubernetes.io/hostname"
