tek_3/sem_5/B-DOP-500-LYN-5-1-bernstein-oscar.deschamps/result.deployment.yaml
#result:
#• Based on epitechcontent/t-dop-600-result:k8s.
#• Namespace: default.
#• Replicated: once (== 2 instances).
#• Memory limit of 128M.
#• Always restarts.
#• Exposes port 80.
#• Has a Traefik rule matching result.dop.io host and proxying to result service.
#• Environment variables:
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deploy
  namespace: default
  labels:
    app: result
    stage: dead
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
      stage: dead
  template:
    metadata:
      labels:
        app: result
        stage: dead
    spec:
      restartPolicy: Always
      containers:
        - name: result-container
          image: epitechcontent/t-dop-600-result:k8s
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128M"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:  
              - key: stage
                operator: In
                values:
                - dead
              - key: app
                operator: In
                values:
                - result
            topologyKey: "kubernetes.io/hostname"
