tek_3/sem_5/B-DOP-500-LYN-5-1-bernstein-oscar.deschamps/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deploy
  namespace: default
  labels:
    app: worker
    stage: dead
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
      stage: dead
  template:
    metadata:
      name: worker
      labels:
        app: worker
        stage: dead
    spec:
      restartPolicy: Always
      containers:
        - name: worker-container
          image: epitechcontent/t-dop-600-worker:k8s 
          resources:
            limits:
              memory: "256Mi"
