tek_3/sem_5/B-DOP-500-LYN-5-1-bernstein-oscar.deschamps/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: default
  labels:
    service: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres-db
    stage: development
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
