tek_3/sem_5/B-DOP-500-LYN-5-1-bernstein-oscar.deschamps/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: default  
spec:
  selector:
    app: redis
    stage: backstage
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 6379 
      targetPort: 6379
