tek_3/sem_5/B-DOP-500-LYN-5-1-bernstein-oscar.deschamps/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: result
  name: result-service
  namespace: default
spec:
    selector:
      app: result
      stage: dead
    type: ClusterIP
    ports:
      - protocol: TCP
        port: 80
        targetPort: 80
