tek_3/sem_5/B-DOP-500-LYN-5-1-bernstein-oscar.deschamps/poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
  namespace: default  
spec:
  rules:
  - host: poll.dop.io
    http:
      paths:
        - path: '/'
          pathType: Prefix
          backend:
            service:
              name: poll-service
              port:
                number: 80
