tek_3/sem_5/B-DOP-500-LYN-5-1-bernstein-oscar.deschamps/result.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
spec:
  rules:
    - host: result.dop.io
      http:
        paths:
          - path: '/' 
            pathType: Prefix
            backend:
              service:
                name: result-service
                port:
                  number: 80
